Se acomodaron estilos de una linea

--- a/Public/views/Pokedex.pug
+++ b/Public/views/Pokedex.pug
@@ -14,7 +14,7 @@ block content
                     div.flex.box-select
                         button.select-button#selectType Types
                         img(src="/Public/Assets/arrow-type.png", alt="arrow").select-arrow.border--right#imgArrow
-                        ul.ul.none.width-special#menu
+                        ul.ul.none.width-dinamic#menu
                             li.option
                                 a(href=`/Pokedex`) All
                                 each types in allTypes
