--- a/Public/Styles/style.css
+++ b/Public/Styles/style.css
@@ -849,9 +849,13 @@ ul::-webkit-scrollbar-thumb {
 
 .flex--wrap { flex-wrap: wrap; }
 
-.width-special { width: 120%; }
+.width-dinamic { width: 120%; }
 
 .margin-left--5 { margin-left: 5px;}
+
+@media screen and (min-width: 375px) and (max-width: 767px) {
+    .width-dinamic { width: 100%; }
+}
 
 @media screen and (min-width: 768px) {
 
@@ -868,6 +872,6 @@ ul::-webkit-scrollbar-thumb {
 
     .conteiner::-webkit-scrollbar { width: 1rem; }
 
-    .width-special { width: 100%; }
+    .width-dinamic { width: 100%; }
 
 }
